--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
                     </div>
                     <form action="#" method="get">
                         <input type="search" name="caviarSearch" id="search" placeholder="Search Your Desire Destinations or Events">
-                        <input type="submit" class="d-none" value="submit" >
+                        <input type="submit" class="d-none" value="submit">
                     </form>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                         <h2>Discover</h2>
                         <h4>Find Nearby Place</h4>
                     </div>
-                    
+
                     <div class="hero-search-form">
                         <!-- Tabs -->
                         <div class="nav nav-tabs" id="heroTab" role="tablist">
@@ -128,20 +128,20 @@
                             <div class="tab-pane fade show active" id="nav-places" role="tabpanel" aria-labelledby="nav-places-tab">
                                 <h6>What are you looking for?</h6>
                                 <form action="explorer" method="get">
-                                    <input type="text" name="keyword" class="form-control custom-select" placeholder="Keyword">
+                                    <input type="text" value="ไก่" name="keyword" class="form-control custom-select" placeholder="Keyword">
                                     <select name="city" class="custom-select">
-                                        <option value="" selected>City Destinations</option>
-                                        <option value="1">Bangkok</option>
-                                        <option value="2">Ayutthaya</option>
-                                        <option value="3">Samut Prakan</option>
-                                        <option value="4">Nonthaburi</option>
-                                        <option value="5">Pathum Thani</option>
+                                        <!-- <option value="0" selected>City Destinations</option> -->
+                                        <option value="Bangkok">Bangkok</option>
+                                        <option value="Ayutthaya">Ayutthaya</option>
+                                        <option value="SamutPrakan">SamutPrakan</option>
+                                        <option value="Nonthaburi">Nonthaburi</option>
+                                        <option value="PathumThani">PathumThani</option>
                                     </select>
-                                    <select name="type"class="custom-select">
-                                        <option value=""  selected>All Catagories</option>
-                                        <option value="1">Restaurants</option>
-                                        <option value="2">Shopping</option>
-                                        <option value="3">Hotels</option>
+                                    <select name="type" class="custom-select">
+                                        <option value="ALL" selected>All Catagories</option>
+                                        <option value="RESTAURANT">Restaurants</option>
+                                        <option value="SHOP">Shopping</option>
+                                        <option value="ACCOMMODATION">Hotels</option>
                                     </select>
                                     <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true" onclick="myFunction()"></i> Search</button>
                                 </form>
@@ -164,13 +164,13 @@
                                         <option value="3">Attraction</option>
                                         <option value="4">Other</option>
                                     </select> -->
-                                    <!-- <select class="custom-select">
+                            <!-- <select class="custom-select">
                                         <option selected>Price Range</option>
                                         <option value="1">$100 - $499</option>
                                         <option value="2">$500 - $999</option>
                                         <option value="3">$1000 - $4999</option>
                                     </select> -->
-                                    <!-- <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
+                            <!-- <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                                 </form>
                             </div> -->
                         </div>
@@ -719,8 +719,8 @@
                     <div class="footer-text">
                         <p>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                     <div class="footer-social-btns">
