--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -132,7 +132,7 @@
                                 <input type="text" name="name" class="form-control" placeholder="Keyword">
                             </div> -->
                             <input type="text" name="keyword" id='keyword' class="form-control custom-select" placeholder="Keyword">
-                            <select name="city" class="custom-select">
+                            <select id="city" class="custom-select" id="destinations">
                                 <option value="0" selected>City Destinations</option>
                                 <option value="Bangkok">Bangkok</option>
                                 <option value="Ayutthaya">Ayutthaya</option>
@@ -140,7 +140,7 @@
                                 <option value="Nonthaburi">Nonthaburi</option>
                                 <option value="PathumThani">PathumThani</option>
                             </select>
-                            <select name="type" class="custom-select">
+                            <select id="type" class="custom-select" id="catagories">
                                 <option value="ALL" selected>All Catagories</option>
                                 <option value="RESTAURANT">Restaurants</option>
                                 <option value="SHOP">Shopping</option>
