--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -400,8 +400,8 @@
             const city = urlParams.get('city');
             const type = urlParams.get('type');
             document.getElementById('keyword').value = keyword;
-            document.getElementById('city').options.length = city;
-            document.getElementById('type').options.length = type;
+            document.getElementById('city').value = city;
+            document.getElementById('type').value = type;
             getapi();
         })
     </script>
