--- a/views/index.ejs
+++ b/views/index.ejs
@@ -204,21 +204,10 @@
                         <div class="row">
                             <!-- Single Catagory Area -->
                             <div class="col-12 col-sm-6 col-md">
-                                <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.4s">
-                                    <div class="catagory-content">
-                                        <img src="img/core-img/icon-2.png" alt="">
-                                        <a href="#">
-                                            <h6>Restaurants</h6>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Single Catagory Area -->
-                            <div class="col-12 col-sm-6 col-md">
                                 <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.6s">
                                     <div class="catagory-content">
                                         <img src="img/core-img/icon-3.png" alt="">
-                                        <a href="#">
+                                        <a href="#cities">
                                             <h6>Shopping</h6>
                                         </a>
                                     </div>
@@ -229,8 +218,19 @@
                                 <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.2s">
                                     <div class="catagory-content">
                                         <img src="img/core-img/icon-1.png" alt="">
-                                        <a href="#">
+                                        <a href="#hotels">
                                             <h6>Hotels</h6>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Single Catagory Area -->
+                            <div class="col-12 col-sm-6 col-md">
+                                <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.4s">
+                                    <div class="catagory-content">
+                                        <img src="img/core-img/icon-2.png" alt="">
+                                        <a href="#" restaurants>
+                                            <h6>Restaurants</h6>
                                         </a>
                                     </div>
                                 </div>
@@ -281,7 +281,7 @@
     <!-- ***** About Area End ***** -->
 
     <!-- ***** Editor Pick Area Start ***** -->
-    <section class="dorne-editors-pick-area bg-img bg-overlay-9 section-padding-100" style="background-image: url(img/bg-img/hero-2.jpg);">
+    <section class="dorne-editors-pick-area bg-img bg-overlay-9 section-padding-100" style="background-image: url(img/bg-img/hero-2.jpg);" id="cities">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -340,7 +340,7 @@
     <!-- ***** Editor Pick Area End ***** -->
 
     <!-- ***** Features Destinations Area Start ***** -->
-    <section class="dorne-features-destinations-area">
+    <section class="dorne-features-destinations-area" id="hotels">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -448,7 +448,7 @@
     <!-- ***** Features Destinations Area End ***** -->
 
     <!-- ***** Features Restaurant Area Start ***** -->
-    <section class="dorne-features-restaurant-area bg-default">
+    <section class="dorne-features-restaurant-area bg-default" id="restaurants">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
